--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,4 @@
-on:
-  # Run on pushes to tags, the "master" branch, and PR's
-  push:
-    tags:
-      - '**'
-    branches:
-      - master
-  pull_request:
+on: [push]
 
 name: CI
 
@@ -148,7 +141,7 @@ jobs:
       # Linux
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v2
-        if: ${{ false && matrix.os == 'ubuntu-16.04' && matrix.gcc-package == 'g++-7' }}
+        if: ${{ matrix.os == 'ubuntu-16.04' && matrix.gcc-package == 'g++-7' }}
         with:
           name: linux
           path: |
@@ -170,30 +163,30 @@ jobs:
 
       # Official action upload-release-asset doesn't support uploading files
       # based on a glob, so use https://github.com/softprops/action-gh-release
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: ${{ startsWith(github.ref, 'refs/tags/') && !(matrix.tb-build-type == 'asan' || matrix.gcc-package == 'g++-8') }}
-        with:
-          draft: true
-          files: |
-            build/*.deb
-            build/*.rpm
-            build/*.dmg
-            build/*.md5
-            cmakebuild/*.7z
-            cmakebuild/*.7z.md5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #- name: Release
+      #  uses: softprops/action-gh-release@v1
+      #  if: ${{ startsWith(github.ref, 'refs/tags/') && !(matrix.tb-build-type == 'asan' || matrix.gcc-package == 'g++-8') }}
+      #  with:
+      #    draft: true
+      #    files: |
+      #      build/*.deb
+      #      build/*.rpm
+      #      build/*.dmg
+      #      build/*.md5
+      #      cmakebuild/*.7z
+      #      cmakebuild/*.7z.md5
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload compiled manual
-        uses: peaceiris/actions-gh-pages@v3
-        if: ${{ startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-16.04' && matrix.gcc-package == 'g++-8' }}
-        with:
-          # I've created a SSH key pair following https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-create-ssh-deploy-key
-          # The TrenchBroom/TrenchBroom repo has a repository secret ACTIONS_DEPLOY_KEY set to the SSH private key
-          # The TrenchBroom/manual repo has a deploy key set to the SSH public key
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          external_repository: TrenchBroom/manual # Repo to deploy to
-          publish_branch: gh-pages # Branch to deploy to
-          publish_dir: ./build/app/gen-manual # Source directory tree
-          destination_dir: latest # Deploy to this directory in target repo
+      #- name: Upload compiled manual
+      #  uses: peaceiris/actions-gh-pages@v3
+      #  if: ${{ startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-16.04' && matrix.gcc-package == 'g++-8' }}
+      #  with:
+      #    # I've created a SSH key pair following https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-create-ssh-deploy-key
+      #    # The TrenchBroom/TrenchBroom repo has a repository secret ACTIONS_DEPLOY_KEY set to the SSH private key
+      #    # The TrenchBroom/manual repo has a deploy key set to the SSH public key
+      #    deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+      #    external_repository: TrenchBroom/manual # Repo to deploy to
+      #    publish_branch: gh-pages # Branch to deploy to
+      #    publish_dir: ./build/app/gen-manual # Source directory tree
+      #    destination_dir: latest # Deploy to this directory in target repo
